# todo

./: README.md
.claude/: settings.local.json
.claude/agents/: fullstack-test-engineer.md
backend/: .env.example  .gitignore  README.md  alembic.ini  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 20260322_1653_c6af280462fe_initial_schema_with_users_todos_.py  20260323_0020_e8ac639f421f_add_user_notification_preferences.py
backend/app/: main.py
backend/app/api/: deps.py
backend/app/api/v1/: auth.py  categories.py  tags.py  todos.py
backend/app/core/: config.py  database.py  security.py
backend/app/models/: __init__.py  todo.py  user.py
backend/app/schemas/: __init__.py  auth.py  todo.py  user.py
frontend/: .env.example  README.md  next.config.mjs  package-lock.json  package.json
frontend/app/: layout.tsx  page.tsx
frontend/app/(auth)/login/: page.tsx
frontend/app/(auth)/register/: page.tsx
frontend/app/(dashboard)/: layout.tsx
frontend/app/(dashboard)/calendar/: page.tsx
frontend/app/(dashboard)/categories/: page.tsx
frontend/app/(dashboard)/dashboard/: page.tsx
frontend/app/(dashboard)/tags/: page.tsx
frontend/components/: Calendar.tsx  Navbar.tsx
frontend/lib/: api.ts  auth-context.tsx
frontend/types/: index.ts
